# chess

./: .gitignore  README.md  pyproject.toml  tasks.py
documentation/: architecture_description.md  requirements_specification.md  testing-document.md  timesheet.md  user-guide.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: index.py
src/db/: init.py  models.py
src/game/: ai.py  board.py  game.py  move.py  pieces.py
src/tests/game/: ai_test.py  board_test.py  game_test.py
src/ui/: board.py  bootstrap.py  main.py
