[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Kekalainen <git@kekalainen.me>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"
Pillow = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
