[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Kekalainen <git@kekalainen.me>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"
Pillow = "^8.2.0"
SQLAlchemy = "^1.4.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
